# Uxplore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
source/: Application.cpp  Application.h  Application.hpp  BrowseSession.cpp  BrowseSession.h  BrowseSession.hpp  BrowserList.cpp  BrowserList.h  BrowserList.hpp  File.cpp  File.h  File.hpp  FilesystemProvider.h  FilesystemProvider.hpp  ImageCache.cpp  ImageCache.h  ImageCache.hpp  LocalFile.cpp  LocalFile.h  LocalFile.hpp  Macros.h  NavigationHistory.cpp  NavigationHistory.h  NavigationHistory.hpp  RenderKit.cpp  RenderKit.h  RenderKit.hpp  TweenObjects.h  TweenObjects.hpp  Utils.cpp  Utils.h  Utils.hpp  main.cpp
source/Device/: PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDevice.hpp
source/Device/PhysicalDevice/: MountedPartition.cpp  MountedPartition.h  MountedPartition.hpp  PartitionTableReader.cpp  PartitionTableReader.h  PartitionTableReader.hpp  PhyDeviceManager.cpp  PhyDeviceManager.h  PhyDeviceManager.hpp  PhyDeviceUtils.cpp  PhyDeviceUtils.h  PhyDeviceUtils.hpp
source/DiscInterface/: DiscInterface.cpp  DiscInterface.h  DiscInterface.hpp  DiscInterfaceWrapper.cpp  DiscInterfaceWrapper.h  DiscInterfaceWrapper.hpp
source/Entry/: Entry.h  Entry.hpp  EntryFile.cpp  EntryFile.h  EntryFile.hpp  EntryPhyDevice.cpp  EntryPhyDevice.hpp  EntryPhysicalMountedPartition.cpp  EntryPhysicalMountedPartition.h  EntryPhysicalMountedPartition.hpp
source/Event/: Event.h
source/GUI/: BrowserItem.cpp  BrowserItem.h  BrowserItem.hpp  Drawable.cpp  Drawable.h  Drawable.hpp  Text.cpp  Text.h  Text.hpp
source/Overlay/: Browser.cpp  Browser.h  Browser.hpp  Dialog.cpp  Dialog.h  Dialog.hpp  ManagedOverlay.cpp  ManagedOverlay.h  Overlay.h  Overlay.hpp  OverlayManager.hpp
